# VoronoiMap2D

./: CMakeLists.txt  README.md  VoronoiMap2D.h  example.cpp  mkdocs.yml
.github/workflows/: c-cpp.yml
docs/: 404.html  index.html  sitemap.xml
docs-source/: Changelog.md  index.md
docs/Changelog/: index.html
docs/license/: index.html
docs/search/: search_index.json
